fixed modal z-index

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -292,6 +292,7 @@ p {
 }
 #modal {
     position:fixed;
+    z-index:2;
     width:100vw;
     height:100vh;
     top:0;
